--- a/index.html
+++ b/index.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PH Mart</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700;800&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    
+    <!-- Navbar section -->
+    <header>
+        <nav>
+            <div class="logo-class">
+                <h1>PH MART</h1>
+            </div>
+            <div class="menu-class">
+                <a href="#products"><li>Products</li></a>
+                <a href="#services"><li>Services</li></a>
+                
+            </div>
+        </nav>
+    </header>
 </body>
 </html>
