--- a/index.html
+++ b/index.html
@@ -24,5 +24,58 @@
             </div>
         </nav>
     </header>
+    <!-- hero section -->
+    <main>
+        <section class="hero-section">
+            <!-- left side content -->
+            <div class="hero-content">
+                <h1>Best Products Within Budget</h1>
+                <p>Efficiently incentivize diverse methods of empowerment and goal oriented networks.Globally promote multifunctional models after emerging interfaces</p>
+                <button>Shop Now</button>
+
+            </div>
+            <!-- right side content -->
+            <div class="hero-img">
+                <img src="images/hero-img.jpeg" alt="heroIMG">
+
+            </div>
+        </section>
+        <!-- products section -->
+        <section id="products" class="products-section">
+            <h1>Featured Products</h1>
+            <div class="products">
+                <div class="product-card">
+                    <img src="images/earphone.jpeg" alt="">
+                    <h3>Price:40$</h3>
+                    <button class="buy-btn">Buy Now</button>
+                </div>
+                <div class="product-card">
+                    <img src="images/airpod.jpeg" alt="">
+                    <h3>Price:50$</h3>
+                    <button class="buy-btn">Buy Now</button>
+                </div>
+                <div class="product-card">
+                    <img src="images/earphone.jpeg" alt="">
+                    <h3>Price:80$</h3>
+                    <button class="buy-btn">Buy Now</button>
+                </div>
+                <div class="product-card">
+                    <img src="images/new-pod.jpeg" alt="">
+                    <h3>Price:46$</h3>
+                    <button class="buy-btn">Buy Now</button>
+                </div>
+                <div class="product-card">
+                    <img src="images/pod-case.jpeg" alt="">
+                    <h3>Price:50$</h3>
+                    <button class="buy-btn">Buy Now</button>
+                </div>
+                <div class="product-card">
+                    <img src="images/wireless.jpeg" alt="">
+                    <h3>Price:70$</h3>
+                    <button class="buy-btn">Buy Now</button>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
