--- a/index.html
+++ b/index.html
@@ -77,5 +77,9 @@
             </div>
         </section>
     </main>
+    <!-- footer  -->
+    <footer>
+        <p>Copyright &copy; 2022 all right reserved by <span>PH MART</span></p>
+    </footer>
 </body>
 </html>
